[gd_scene load_steps=11 format=3 uid="uid://bb6lbab00x0me"]

[ext_resource type="Script" path="res://weapons/rifle/rifle.gd" id="1_4ckwo"]
[ext_resource type="Shader" path="res://Shader/Weapon.gdshader" id="1_21b3a"]
[ext_resource type="PackedScene" uid="uid://cxbejrk722pg1" path="res://external/rifle0_mat.glb" id="3_ypu3o"]

[sub_resource type="Curve" id="Curve_cu53u"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.237624, 1), 0.0, 0.0, 0, 0, Vector2(0.490099, 0.472527), 0.0, 0.0, 0, 0, Vector2(1, 0.43956), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_6lwua"]
min_value = -0.2
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.447368, 1), 0.0, 0.0, 0, 0, Vector2(0.489474, -0.2), 0.0, 0.0, 0, 0, Vector2(0.584211, 0.446154), 0.0, 0.0, 0, 0, Vector2(0.647368, -0.2), 0.0, 0.0, 0, 0, Vector2(0.752632, 0.472527), -0.161645, -0.161645, 0, 0, Vector2(0.831579, -0.2), 0.0, 0.0, 0, 0, Vector2(0.88421, 0.446154), 0.0, 0.0, 0, 0, Vector2(0.947368, -0.2), 0.0, 0.0, 0, 0, Vector2(0.994737, 0.446154), 0.0, 0.0, 0, 0]
point_count = 10

[sub_resource type="Curve" id="Curve_2ym7a"]
min_value = -1.0
_data = [Vector2(0, 0.340659), 0.0, 0.0, 0, 0, Vector2(0.0947368, -0.274725), 0.0, 0.0, 0, 0, Vector2(0.136842, 0.296703), 0.0, 0.0, 0, 0, Vector2(0.205263, -0.340659), 0.0, 0.0, 0, 0, Vector2(0.263158, 0.318681), 0.0, 0.0, 0, 0, Vector2(0.33, 0), 0.0, 0.0, 0, 0, Vector2(0.33, -1), 0.0, 0.0, 0, 0, Vector2(0.689474, 1), 0.0, 0.0, 0, 0, Vector2(1, -1), 0.0, 0.0, 0, 0]
point_count = 9

[sub_resource type="Curve" id="Curve_o7yhg"]
min_value = -1.0
_data = [Vector2(0, 0.494505), 0.0, 0.0, 0, 0, Vector2(0.105528, 0.67033), 0.0, 0.0, 0, 0, Vector2(0.201005, -0.208791), 0.0, 0.0, 0, 0, Vector2(0.291457, 1), 0.0, 0.0, 0, 0, Vector2(0.336683, -0.450549), 0.0, 0.0, 0, 0, Vector2(0.41206, 0.637363), 0.0, 0.0, 0, 0, Vector2(0.547739, 0.384615), 0.0, 0.0, 0, 0, Vector2(0.60804, 1), 0.0, 0.0, 0, 0, Vector2(0.638191, -0.472527), 0.0, 0.0, 0, 0, Vector2(0.718593, 1), 0.0, 0.0, 0, 0, Vector2(0.834171, -0.582418), 0.0, 0.0, 0, 0, Vector2(0.849246, 0.637363), 0.0, 0.0, 0, 0, Vector2(0.904523, 1), 0.0, 0.0, 0, 0, Vector2(0.944724, 0.604396), 0.0, 0.0, 0, 0, Vector2(1, -1), 0.0, 0.0, 0, 0]
point_count = 15

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nws5j"]
render_priority = 0
shader = ExtResource("1_21b3a")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/fov = 77.0

[sub_resource type="BoxMesh" id="BoxMesh_dr22j"]
material = SubResource("ShaderMaterial_nws5j")
size = Vector3(0.1, 0.1, 0.6)

[sub_resource type="BoxMesh" id="BoxMesh_7fbbn"]
size = Vector3(0.1, 0.1, 0.6)

[node name="Rifle" type="Node3D" groups=["inv_item", "inv_rifle0"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.628777, 0)
script = ExtResource("1_4ckwo")
damagedistance = SubResource("Curve_cu53u")
recoilcurve_y = SubResource("Curve_6lwua")
recoilcurve_x = SubResource("Curve_2ym7a")
weapon_recoil_show = SubResource("Curve_o7yhg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
cast_shadow = 0
mesh = SubResource("BoxMesh_dr22j")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
visible = false
cast_shadow = 3
mesh = SubResource("BoxMesh_7fbbn")
skeleton = NodePath("../MeshInstance3D")

[node name="rifle_fire_rate" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.12
one_shot = true

[node name="recoil_reset" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="rifle0_mat" parent="." instance=ExtResource("3_ypu3o")]
transform = Transform3D(-7.64949e-08, 1.75, -7.64949e-08, 0, -7.64949e-08, -1.75, -1.75, -7.64949e-08, 3.3437e-15, 0, 0, -0.2)

[connection signal="timeout" from="rifle_fire_rate" to="." method="_on_rifle_fire_rate_timeout"]
[connection signal="timeout" from="recoil_reset" to="." method="_on_recoil_reset_timeout"]
